--- a/index.html
+++ b/index.html
@@ -148,6 +148,40 @@ freshest ingredients</h2>
 </div>
 </div>
 </section>
+<section class="sec-2 position-relative mt-5">
+   
+<div class="custom-shape-divider-top-1755597664 bg-danger big-2 position-relative">
+     
+    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+        <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+    </svg>
+    <h2 class="bg-white text-center text-danger text-uppercase position-absolute fw-bold  ">about us</h2>
+   <div class="big-3 px-1">
+    <div class="ist shadow animate__animated wow animate__lightSpeedInLeft">
+       <div class=" cloud w-100 animate__animated wow animate__flipInY animate__delay-1s"> <p>more than</p>
+        <p>10years of</p>
+        <p>experianse</p></div>
+    </div>
+    <div class="ist shadow animate__animated wow animate__lightSpeedInLeft">
+       <div class=" cloud w-100 animate__animated wow animate__flipInY animate__delay-1s"> <p>more than</p>
+        <p>10years of</p>
+        <p>experianse</p></div>
+    </div>
+    <div class="ist shadow animate__animated wow animate__lightSpeedInRight">
+       <div class=" cloud w-100 animate__animated wow animate__flipInY animate__delay-1s">
+         <p>more than</p>
+        <p>10years of</p>
+        <p>experianse</p></div>
+    </div>
+    <div class="ist shadow animate__animated wow animate__lightSpeedInRight">
+       <div class=" cloud w-100 animate__animated wow animate__flipInY animate__delay-1s"> 
+        <p>more than</p>
+        <p>10years of</p>
+        <p>experianse</p></div>
+    </div>
+   </div>
+</div>
+</section>
 
 
 
