--- a/index.html
+++ b/index.html
@@ -321,6 +321,82 @@ freshest ingredients</h2>
 </div>
 </section>
 
+<section class="sec-5 mt-5">
+<div class="big-5">
+    <div class="card col-lg-4 col-md-12 col-sm-12  ">
+        <div class="card-body position-relative">
+            <img src="./img/banner-v173-chec1.webp" alt="" class="w-100">
+            <div class="position-absolute inner-1 d-flex flex-column justify-content-center align-items-center wow ">
+
+                <p>fast food</p>
+                <h2>chickin</h2>
+                <!-- From Uiverse.io by mobinkakei --> 
+
+    <button class="btn">shop now</button>
+            </div>
+        </div>
+    </div>
+    <div class="card col-lg-4 col-md-12 col-sm-12 ">
+        <div class="card-body position-relative">
+            <img src="./img/banner-v173- mid2.webp" alt="" class="w-100">
+             <div class="position-absolute inner-1 d-flex flex-column justify-content-center align-items-center wow ">
+
+                <p>fast food</p>
+                <h2>Beverage</h2>
+                <!-- From Uiverse.io by mobinkakei --> 
+
+    <button class="btn">shop now</button>
+            </div>
+        </div>
+    </div>
+    <div class="card col-lg-4 col-md-12 col-sm-12 ">
+        <div class="card-body position-relative">
+            <img src="./img/banner-v173- right3.webp" alt="" class="w-100">
+             <div class="position-absolute inner-1 d-flex flex-column justify-content-center align-items-center wow">
+
+                <p>fast food</p>
+                <h2>Burgers</h2>
+                <!-- From Uiverse.io by mobinkakei --> 
+
+    <button class="btn">shop now</button>
+            </div>
+        </div>
+    </div>
+</div>
+</section>
+<section class="sec-6 mt-5">
+    <div class="big">
+<div class="d-flex w-100 justify-content-around">        <div class="col-lg-3 col-md-6 col-sm-6 ">
+           <div class="col-6 d-flex justify-content-center">
+                <img src="./img/brand3.avif" alt="" class="w-100">
+           </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 ">
+            <div class="col-6 d-flex justify-content-center">
+                <img src="./img/brand4.png" alt="" class="w-100">
+           </div>
+        </div></div>
+        <div class="d-flex w-100 justify-content-around">
+                 <div class="col-lg-3 col-md-6 col-sm-6 ">
+            <div class="col-6 d-flex justify-content-center">
+                <img src="./img/brand5.avif" alt="" class="w-100">
+           </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 ">
+            <div class="col-6 d-flex justify-content-center">
+                <img src="./img/brand6.avif" alt="" class="w-100">
+            </div>
+        </div>
+        </div>
+    </div>
+</section>
+<section class="sec-7 mt-5">
+    <div class="col-4 border border-1 "></div>
+    <div class="col-4 border border-1 shadow"></div>
+    <div class="col-4 border border-1"></div>
+</section>
+
+
 
 
    <!-- (Optional) - Place this js code after initializing bootstrap.min.js or bootstrap.bundle.min.js -->
