--- a/index.html
+++ b/index.html
@@ -391,12 +391,87 @@ freshest ingredients</h2>
     </div>
 </section>
 <section class="sec-7 mt-5">
-    <div class="col-4 border border-1 "></div>
-    <div class="col-4 border border-1 shadow"></div>
-    <div class="col-4 border border-1"></div>
+    <div class="row m-0">
+        <div class="col-lg-4 col-md-12 col-sm-12 animate__animated  animate__fadeInUp wow">
+             <div class="mid border border-1 d-flex justify-content-around  left ">
+        <div class="left-1 d-flex flex-column align-items-center justify-content-center gap-3">
+            <h3>Account</h3>
+            <a href="#" class="text-decoration-none text-dark">About Us</a>
+            <a href="#" class="text-decoration-none text-dark">Delivery Information</a>
+            <a href="#" class="text-decoration-none text-dark">Privacy Policy</a>
+            <a href="#" class="text-decoration-none text-dark">Discount</a>
+            <a href="#" class="text-decoration-none text-dark">Custom Service</a>
+            <a href="#" class="text-decoration-none text-dark">Term & Condition</a>
+        </div>
+        <div class="right-1 d-flex flex-column align-items-center justify-content-center gap-3">
+            <h3>Services</h3>
+            <a href="#" class="text-decoration-none text-dark">Sitemap</a>
+            <a href="#" class="text-decoration-none text-dark">Privacy Policy</a>
+            <a href="#" class="text-decoration-none text-dark">Your Account</a>
+            <a href="#" class="text-decoration-none text-dark">Advanced Search</a>
+            <a href="#" class="text-decoration-none text-dark">Term & Condition</a>
+            <a href="#" class="text-decoration-none text-dark">Contact Us</a>
+        </div>
+     </div>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12 animate__animated  animate__fadeInUp wow">
+            <div class="mid border border-1 shadow d-flex flex-column justify-content-center align-items-center">
+        <img src="./img/logo.webp" alt="" style="width: 250px;">
+        <div class="d-flex gap-2">
+            <a href="#" class="border "><i class="fa-brands fa-square-facebook fs-4" style="color: #000000;"></i></a>
+            <a href="#"><i class="fa-brands fa-x-twitter fs-4" style="color: #050505;"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram fs-4" style="color: #0d0d0d;"></i></a>
+            <a href="#"><i class="fa-brands fa-square-whatsapp fs-4" style="color: #111212;"></i></a>
+        </div>
+    </div>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12 animate__animated  animate__fadeInUp wow"><div class="mid border border-1 d-flex flex-column justify-content-center align-items-center">
+        <h2>NEWSLETTER</h2>
+        <p>Get notified of new products, limited releases, and more.Get notified of new products, limited releases, and more.</p>
+        <input type="email" placeholder="Enter your email" class="border-0 btn-outline-secondary">
+    </div></div>
+    </div>
+   <!-- <div class="big ">
+     <div class="mid border border-1 d-flex justify-content-around  left ">
+        <div class="left-1 d-flex flex-column align-items-center justify-content-center gap-3">
+            <h3>Account</h3>
+            <a href="#" class="text-decoration-none text-dark">About Us</a>
+            <a href="#" class="text-decoration-none text-dark">Delivery Information</a>
+            <a href="#" class="text-decoration-none text-dark">Privacy Policy</a>
+            <a href="#" class="text-decoration-none text-dark">Discount</a>
+            <a href="#" class="text-decoration-none text-dark">Custom Service</a>
+            <a href="#" class="text-decoration-none text-dark">Term & Condition</a>
+        </div>
+        <div class="right-1 d-flex flex-column align-items-center justify-content-center gap-3">
+            <h3>Services</h3>
+            <a href="#" class="text-decoration-none text-dark">Sitemap</a>
+            <a href="#" class="text-decoration-none text-dark">Privacy Policy</a>
+            <a href="#" class="text-decoration-none text-dark">Your Account</a>
+            <a href="#" class="text-decoration-none text-dark">Advanced Search</a>
+            <a href="#" class="text-decoration-none text-dark">Term & Condition</a>
+            <a href="#" class="text-decoration-none text-dark">Contact Us</a>
+        </div>
+     </div>
+    <div class="mid border border-1 shadow d-flex flex-column justify-content-center align-items-center">
+        <img src="./img/logo.webp" alt="" style="width: 250px;">
+        <div class="d-flex gap-2">
+            <a href="#" class="border "><i class="fa-brands fa-square-facebook fs-4" style="color: #000000;"></i></a>
+            <a href="#"><i class="fa-brands fa-x-twitter fs-4" style="color: #050505;"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram fs-4" style="color: #0d0d0d;"></i></a>
+            <a href="#"><i class="fa-brands fa-square-whatsapp fs-4" style="color: #111212;"></i></a>
+        </div>
+    </div>
+    <div class="mid border border-1 d-flex flex-column justify-content-center align-items-center">
+        <h2>NEWSLETTER</h2>
+        <p>Get notified of new products, limited releases, and more.Get notified of new products, limited releases, and more.</p>
+        <input type="email" placeholder="Enter your email" class="border-0 btn-outline-secondary">
+    </div>
+   </div> -->
 </section>
 
-
+<footer class="bg-danger text-white text-center">
+    <h5 class="text-white p-2 text-capitalize text-center animate__animated animate__zoomInDown wow">&copy; mohammed elgabry</h5>
+</footer>
 
 
    <!-- (Optional) - Place this js code after initializing bootstrap.min.js or bootstrap.bundle.min.js -->
