--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </div>
  </div>
 
-<section class="sec-1 container mt-5">
+<section class="sec-1 container ">
     <div class="d-flex justify-content-between align-items-center big-1">
 <div class="right-1">
     <!-- From Uiverse.io by Smit-Prajapati --> 
